lib/dcimgui/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiViewport_t ImGuiViewport;                                  
typedef int ImGuiDir;             
typedef int ImGuiCol;             
typedef int ImGuiStyleVar;        
typedef int ImGuiButtonFlags;       
typedef int ImGuiItemFlags;         
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API void ImGui_PushStyleVarY(ImGuiStyleVar idx, float val_y);      
CIMGUI_API void ImGui_PopStyleVar(void);                                  
CIMGUI_API void ImGui_PopStyleVarEx(int count );
CIMGUI_API void ImGui_PushItemFlag(ImGuiItemFlags option, bool enabled);  
CIMGUI_API void ImGui_PopItemFlag(void);
CIMGUI_API void  ImGui_PushItemWidth(float item_width);                       
CIMGUI_API void  ImGui_PopItemWidth(void);
CIMGUI_API void  ImGui_SetNextItemWidth(float item_width);                    
CIMGUI_API float ImGui_CalcItemWidth(void);                                   
CIMGUI_API void  ImGui_PushTextWrapPos(float wrap_local_pos_x );  
CIMGUI_API void  ImGui_PopTextWrapPos(void);
CIMGUI_API ImVec2        ImGui_GetFontTexUvWhitePixel(void);                                 
CIMGUI_API ImU32         ImGui_GetColorU32(ImGuiCol idx);                                    
CIMGUI_API ImU32         ImGui_GetColorU32Ex(ImGuiCol idx, float alpha_mul );    
CIMGUI_API ImU32         ImGui_GetColorU32ImVec4(ImVec4 col);                                
CIMGUI_API ImU32         ImGui_GetColorU32ImU32(ImU32 col);                                  
CIMGUI_API ImU32         ImGui_GetColorU32ImU32Ex(ImU32 col, float alpha_mul );  
CIMGUI_API const ImVec4* ImGui_GetStyleColorVec4(ImGuiCol idx);                              
CIMGUI_API ImVec2 ImGui_GetCursorScreenPos(void);        
CIMGUI_API void   ImGui_SetCursorScreenPos(ImVec2 pos);  
CIMGUI_API ImVec2 ImGui_GetContentRegionAvail(void);     
CIMGUI_API ImVec2 ImGui_GetCursorPos(void);              
CIMGUI_API float  ImGui_GetCursorPosX(void);             
CIMGUI_API float  ImGui_GetCursorPosY(void);             
CIMGUI_API void   ImGui_SetCursorPos(ImVec2 local_pos);  
CIMGUI_API void   ImGui_SetCursorPosX(float local_x);    
CIMGUI_API void   ImGui_SetCursorPosY(float local_y);    
CIMGUI_API ImVec2 ImGui_GetCursorStartPos(void);         
CIMGUI_API void  ImGui_Separator(void);                          
CIMGUI_API void  ImGui_SameLine(void);                           
CIMGUI_API void  ImGui_SameLineEx(float offset_from_start_x , float spacing ); 
CIMGUI_API void  ImGui_NewLine(void);                            
CIMGUI_API void  ImGui_Spacing(void);                            
CIMGUI_API void  ImGui_Dummy(ImVec2 size);                       
CIMGUI_API void  ImGui_Indent(void);                             
CIMGUI_API void  ImGui_IndentEx(float indent_w );    
CIMGUI_API void  ImGui_Unindent(void);                           
CIMGUI_API void  ImGui_UnindentEx(float indent_w );  
CIMGUI_API void  ImGui_BeginGroup(void);                         
CIMGUI_API void  ImGui_EndGroup(void);                           
CIMGUI_API void  ImGui_AlignTextToFramePadding(void);            
CIMGUI_API float ImGui_GetTextLineHeight(void);                  
CIMGUI_API float ImGui_GetTextLineHeightWithSpacing(void);       
CIMGUI_API float ImGui_GetFrameHeight(void);                     
CIMGUI_API float ImGui_GetFrameHeightWithSpacing(void);          
CIMGUI_API void    ImGui_PushID(const char* str_id);                                   
CIMGUI_API void    ImGui_PushIDStr(const char* str_id_begin, const char* str_id_end);  
CIMGUI_API void    ImGui_PushIDPtr(const void* ptr_id);                                
CIMGUI_API void    ImGui_PushIDInt(int int_id);                                        
CIMGUI_API void    ImGui_PopID(void);                                                  
CIMGUI_API ImGuiID ImGui_GetID(const char* str_id);                                    
CIMGUI_API ImGuiID ImGui_GetIDStr(const char* str_id_begin, const char* str_id_end);
CIMGUI_API ImGuiID ImGui_GetIDPtr(const void* ptr_id);
CIMGUI_API ImGuiID ImGui_GetIDInt(int int_id);
CIMGUI_API void ImGui_TextUnformatted(const char* text);                                           
CIMGUI_API void ImGui_TextUnformattedEx(const char* text, const char* text_end );      
CIMGUI_API void ImGui_TextColoredUnformatted(ImVec4 col, const char* text);                        
CIMGUI_API void ImGui_TextDisabledUnformatted(const char* text);                                   
CIMGUI_API void ImGui_TextWrappedUnformatted(const char* text);                                    
CIMGUI_API void ImGui_LabelTextUnformatted(const char* label, const char* text);                   
CIMGUI_API void ImGui_BulletTextUnformatted(const char* text);                                     
CIMGUI_API void ImGui_SeparatorText(const char* label);                                            
CIMGUI_API bool ImGui_Button(const char* label);                                                               
CIMGUI_API bool ImGui_ButtonEx(const char* label, ImVec2 size );                           
CIMGUI_API bool ImGui_SmallButton(const char* label);                                                          
CIMGUI_API bool ImGui_InvisibleButton(const char* str_id, ImVec2 size, ImGuiButtonFlags flags );      
CIMGUI_API bool ImGui_ArrowButton(const char* str_id, ImGuiDir dir);                                           
CIMGUI_API bool ImGui_Checkbox(const char* label, bool* v);
CIMGUI_API bool ImGui_CheckboxFlagsIntPtr(const char* label, int* flags, int flags_value);
CIMGUI_API bool ImGui_CheckboxFlagsUintPtr(const char* label, unsigned int* flags, unsigned int flags_value);
CIMGUI_API bool ImGui_RadioButton(const char* label, bool active);                                             
CIMGUI_API bool ImGui_RadioButtonIntPtr(const char* label, int* v, int v_button);                              
CIMGUI_API void ImGui_ProgressBar(float fraction, ImVec2 size_arg , const char* overlay );
CIMGUI_API void ImGui_Bullet(void);                                                                            
CIMGUI_API bool ImGui_TextLink(const char* label);                                                             
CIMGUI_API bool ImGui_TextLinkOpenURL(const char* label);                                                      
CIMGUI_API bool ImGui_TextLinkOpenURLEx(const char* label, const char* url );                      
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowWorkAreaInsets(void (*getWindowWorkAreaInsetsFunc)(ImGuiViewport* vp, ImVec4* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowFramebufferScale(void (*getWindowFramebufferScaleFunc)(ImGuiViewport* vp, ImVec2* result));  
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowPos(void (*getWindowPosFunc)(ImGuiViewport* vp, ImVec2* result));    
CIMGUI_API void ImGuiPlatformIO_SetPlatform_GetWindowSize(void (*getWindowSizeFunc)(ImGuiViewport* vp, ImVec2* result));  