src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushStyleVarY(int idx, float val_y);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopStyleVarEx(int count);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopStyleVar();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushItemFlag(int option, [MarshalAs(UnmanagedType.I1)] bool enabled);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopItemFlag();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushItemWidth(float item_width);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopItemWidth();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetNextItemWidth(float item_width);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_CalcItemWidth();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushTextWrapPos(float wrap_local_pos_x);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopTextWrapPos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetFontTexUvWhitePixel();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetColorU32Ex(int idx, float alpha_mul);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetColorU32(int idx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetColorU32ImVec4(ImVec4 col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetColorU32ImU32Ex(uint col, float alpha_mul);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetColorU32ImU32(uint col);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern System.IntPtr ImGui_GetStyleColorVec4(int idx);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetCursorScreenPos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetCursorScreenPos(ImVec2 pos);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetContentRegionAvail();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetCursorPos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetCursorPosX();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetCursorPosY();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetCursorPos(ImVec2 local_pos);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetCursorPosX(float local_x);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SetCursorPosY(float local_y);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern ImVec2 ImGui_GetCursorStartPos();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Separator();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SameLineEx(float offset_from_start_x, float spacing);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SameLine();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_NewLine();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Spacing();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Dummy(ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_IndentEx(float indent_w);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Indent();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_UnindentEx(float indent_w);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Unindent();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_BeginGroup();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_EndGroup();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_AlignTextToFramePadding();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetTextLineHeight();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetTextLineHeightWithSpacing();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetFrameHeight();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern float ImGui_GetFrameHeightWithSpacing();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushID([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushIDStr([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_begin, [MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_end);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushIDPtr(System.IntPtr ptr_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PushIDInt(int int_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_PopID();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetID([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetIDStr([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_begin, [MarshalAs(UnmanagedType.LPUTF8Str)] string str_id_end);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetIDPtr(System.IntPtr ptr_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern uint ImGui_GetIDInt(int int_id);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TextUnformattedEx([MarshalAs(UnmanagedType.LPUTF8Str)] string text, [MarshalAs(UnmanagedType.LPUTF8Str)] string text_end);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TextUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TextColoredUnformatted(ImVec4 col, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TextDisabledUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_TextWrappedUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_LabelTextUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_BulletTextUnformatted([MarshalAs(UnmanagedType.LPUTF8Str)] string text);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_SeparatorText([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Button([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SmallButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InvisibleButton([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, ImVec2 size, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_ArrowButton([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id, int dir);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_Checkbox([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_CheckboxFlagsIntPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr flags, int flags_value);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_CheckboxFlagsUintPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr flags, uint flags_value);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_RadioButton([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.I1)] bool active);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_RadioButtonIntPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_button);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_ProgressBar(float fraction, ImVec2 size_arg, [MarshalAs(UnmanagedType.LPUTF8Str)] string overlay);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    public static extern void ImGui_Bullet();
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TextLink([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TextLinkOpenURLEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string url);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_TextLinkOpenURL([MarshalAs(UnmanagedType.LPUTF8Str)] string label);
